# compare-locales

./: .git-blame-ignore-revs  .gitignore  .hgtags  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yaml
compare_locales/: __init__.py  commands.py  keyedtuple.py  merge.py  mozpath.py  parser.py  plurals.py  serializer.py  util.py
compare_locales/checks/: __init__.py  android.py  base.py  dtd.py  fluent.py  properties.py
compare_locales/compare/: __init__.py  content.py  observer.py  utils.py
compare_locales/integration_tests/: __init__.py  test_plurals.py
compare_locales/lint/: cli.py  linter.py  util.py
compare_locales/parser/: __init__.py  android.py  base.py  defines.py  dtd.py  fluent.py  ini.py  po.py  properties.py
compare_locales/parsers/: __init__.py  android.py  base.py  defines.py  fluent.py  po.py
compare_locales/parsers/tests/: __init__.py  test_android.py  test_base.py  test_defines.py  test_dtd.py  test_fluent.py  test_ini.py  test_po.py  test_properties.py
compare_locales/paths/: __init__.py  configparser.py  files.py  ini.py  matcher.py  project.py
compare_locales/resource/: __init__.py  add_messages.py  elements.py  from_fluent.py  from_properties.py  to_fluent.py  to_properties.py
compare_locales/resource/tests/: test_fluent.py  test_properties.py
compare_locales/tests/: __init__.py  test_apps.py  test_checks.py  test_compare.py  test_defines.py  test_ini.py  test_keyedtuple.py  test_merge.py  test_mozpath.py  test_parser.py  test_util.py
compare_locales/tests/android/: test_checks.py  test_merge.py  test_parser.py
compare_locales/tests/dtd/: test_checks.py  test_merge.py  test_parser.py
compare_locales/tests/fluent/: test_checks.py  test_merge.py  test_parser.py
contrib/lang/: setup.cfg  setup.py
(+23 files in other folders)
